Update code for /users/signup & /users/verify
