# models/user.js
@@ -2,14 +2,17 @@ const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
 const passportLocalMongoose = require('passport-local-mongoose'); // https://www.npmjs.com/package/passport-local-mongoose
 
+// You're free to define your User how you like. Passport-Local Mongoose will add a username, hash and salt field to store the username,
+// the hashed password and the salt value.
+
 const User = new Schema({
   firstname: {
     type: String,
-    default: ''
+    required: true
   },
   lastname: {
     type: String,
-    default: ''
+    required: true
   },
   verified: {
     type: Boolean,
