# openapi.yaml
@@ -11,6 +11,49 @@ servers:
     description: Heroku site
 
 paths:
+
+# /users/signup POST configuration:
+# No parameters are configured for a POST
+  /users/signup:
+    post:
+      summary: Used to sign up a new user to the system
+      description: Signup to the system
+      requestBody:
+        description: User information required to create an account
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                firstname:
+                  type: string
+                  example: Richard
+                lastname:
+                  type: string
+                  example: Polisuk
+                username:
+                  type: string
+                  example: email@example.com
+                password:
+                  type: string
+                  example: password
+      responses:
+        '200':
+          description: User is logged in successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  status:
+                    type: string
+                    example: Registration Successful!
+        '422':
+          description: Error: Unprocessable Entity
+
 # /users/login POST configuration:
   /users/login:
     post:
@@ -33,25 +76,7 @@ paths:
         '401':
           description: User is not authorized
 
-# /users GET configuration: 
-  /users:
-    get:
-      security:
-        - bearerAuth: []
-      summary: Get all users in system
-      description: Returns an array of all the users in the system
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/UserGetReceive'
-        '401':
-          description: User is not authorized
-
+# /charities GET configuration: 
   /charities:
     get:
       summary: Get the charity information
@@ -119,51 +144,6 @@ paths:
                   currentPage: 
                     type: string
                     example: 1
-
-
-# /users/signup POST configuration:
-  /users/signup:
-    post:
-      summary: Signup to the system
-      description: Signup to the system
-      requestBody:
-        description: User information to create an account
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/SignupSend'
-        required: false
-      responses:
-        '200':
-          description: User is logged in successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    example: true
-                  status:
-                    type: string
-                    example: Registration Successful!
-        '422':
-          description: UserExistsError, unprocessable entity.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  err:
-                    type: object
-                    properties:
-                      name:
-                        type: string
-                        example: UserExistsError
-                      status:
-                        type: string
-                        example: A user with the given username is already registered
-
 
   '/users/{userId}/change-password/':
     put:
@@ -253,28 +233,6 @@ components:
         __v:
           type: integer
           
-    # Schema for input of /users/signup
-    SignupSend:
-      required:
-        - firstname
-        - lastname
-        - username
-        - password
-      type: object
-      properties:
-        firstname:
-          type: string
-          example: Richard
-        lastname:
-          type: string
-          example: Polisuk
-        username:
-          type: string
-          example: email@example.com
-        password:
-          type: string
-          example: password
-
     User:
       required:
         - _id
